# Algorithm-Optimization

./: README.md
Optimizing 2d-convolution/big-board-2d-convolution-chiragdhamija-main/: README.md
Optimizing 2d-convolution/big-board-2d-convolution-chiragdhamija-main/src/: CMakeLists.txt  main.cpp
Optimizing matrix-matrix-multiplication/big-board-matrix-matrix-multiplication-chiragdhamija-main/: README.md
Optimizing matrix-matrix-multiplication/big-board-matrix-matrix-multiplication-chiragdhamija-main/src/: CMakeLists.txt  main.cpp
Optimizing matrix-matrix-multiplication/big-board-matrix-matrix-multiplication-chiragdhamija-main/tester/: tester.cpp
Optimizing-2d-convolution-using CUDA/big-board-2d-convolution-cuda-chiragdhamija-main/: README.md
Optimizing-2d-convolution-using CUDA/big-board-2d-convolution-cuda-chiragdhamija-main/src/: main.cu
optimizing-matrix-vector-multiplication/optimizing-matrix-vector-multiplication-chiragdhamija-main/: README.md
optimizing-matrix-vector-multiplication/optimizing-matrix-vector-multiplication-chiragdhamija-main/matrix-vector/: Makefile  mat-vec-manual-vectorization.c  mat-vec-par-vect.c  mat-vec-par.c
